<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_toolbox_ydlidar</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2365421405@qq.com">xybxy123</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>slam_toolbox</depend>
  <depend>tf2_ros</depend>
  <depend>rclcpp</depend>
  <depend>ydlidar_ros2_driver</depend>

  <depend>rviz2</depend>
  <depend>nav2_map_server</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
